k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: design-system-service
  namespace: monitor-ui
spec:
  type: NodePort
  selector:
    name: design-system
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
