k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: design-system-ingress
  namespace: monitor-ui
spec:
  ingressClassName: nginx
  rules:
    - host: design-system.ali-netbase.com
      http:
        paths:
          - backend:
              service:
                name: design-system-service
                port:
                  number: 80
            path: /
            pathType: Prefix
